--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [URL]
 test_url = http://10.0.250.192:9090/sso/login?service=http://10.0.250.188/#
 sso_url = http://10.0.250.192:9090/sso/login?
-production_url = https://sso.avicnet.cn/sso/login?service=https://iam.avicnet.cn/#
+production_url = 
 
 [LOGIN]
 vcc = test,test
